--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: middle;
-
+    background-color: #250f36 ;
 }
